--- a/janvaani-be/package.json
+++ b/janvaani-be/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@prisma/client": "^6.16.2",
+    "@supabase/supabase-js": "^2.57.4",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/morgan": "^1.9.10",
@@ -20,6 +22,7 @@
     "express": "^5.1.0",
     "morgan": "^1.10.1",
     "npm": "^11.6.0",
+    "prisma": "^6.16.2",
     "typescript": "^5.9.2"
   }
 }
